objects/Campaign_Partners__c.object
<CustomObject>
    <description>Marketing Desktop Component - 
Partners associated with a Campaign. Marketing Extension to Partner will be a 1-M relation.</description>
    <fields>
        <fullName>Amount_Budget_Impact__c</fullName>
        <description>This formula field is used to auto-compute the roll-up Budgeted Co-Marketing Funds custom field at the Campaign level. If Contribution has been made to Partner, then a +ve value will be added to the budget. If amount is Received From partner, a -ve value will be added o the budget. If no option has been selected in the Co-Marketing Fund picklist, amount will have no impact on the budget.</description>
        <formula>IF ( ISPICKVAL( Partner_Involvement__c , &apos;Contributed To&apos;), 
Funding_Amount__c , 
IF ( ISPICKVAL( Partner_Involvement__c , &apos;Received From&apos;), 
Funding_Amount__c * -1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Budget Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>will be used with the Campaign Extension object is removed</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Partner</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Funding_Amount__c</fullName>
        <label>Budgeted Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Involvement_Details__c</fullName>
        <description>Details of partner involvement in the Campaign</description>
        <label>Involvement Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaign Partners</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Involvement__c</fullName>
        <description>Partner involvement in the Campaign i.e. if the amount is to be received from or contributed to the Partner. Budgeted Co-Marketing Fund field on Campaign object will be computed accordingly.</description>
        <inlineHelpText>Select if the amount is being Contributed To or Received From the Partner</inlineHelpText>
        <label>Co-Marketing Funds</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contributed To</fullName>
                </value>
                <value>
                    <fullName>Received From</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner account reference</description>
        <inlineHelpText>Partner associated with the Campaign</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Partner On</relationshipLabel>
        <relationshipName>Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Partner</label>
    <nameField>
        <displayFormat>PTNR-{0000}</displayFormat>
        <label>Ref. #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>